# capstone_008D_grupo_3

App MetroSence/backend_metrosence/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
App MetroSence/backend_metrosence/app/: main.py
App MetroSence/backend_metrosence/app/accesos/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/auth/: controller.py
App MetroSence/backend_metrosence/app/entities/: acceso.py  admin.py  association.py  estacion.py  horario.py  linea.py  recorrido_al_anden.py  sentido.py
App MetroSence/backend_metrosence/app/estaciones/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/horarios/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/lineas/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/lineas_estaciones/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/recorridos/: controller.py  model.py  service.py
App MetroSence/backend_metrosence/app/sentidos/: controller.py  model.py  service.py
App MetroSence/frontend_metrosence/: .gitignore  app.config.js  app.json  package-lock.json  package.json  tailwind.config.js
App MetroSence/metrosence-agents/: .gitignore  bridge.py  requirements.txt
Documentos Grupales Fase 1/: Presentacion grupal.pptx
backend_metrosence/: .gitignore  pyproject.toml
backend_metrosence/app/: api.py  exceptions.py  main.py
frontend/front_metrosense/: app.json  package-lock.json  package.json
frontend_metrosence/: app.json  package-lock.json  package.json
(+85 files in other folders)
